syntax = "proto3";

package game;

option go_package = "/Messages";

message NavV3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message PathTest {
  repeated NavV3 paths = 1;
}

message PlayerPosition {
  float x = 1;
  float y = 2;
  float z = 3;
  float fx = 4;
  float fy = 5;
  float fz = 6;
  string player_id = 7;
  float speed = 8;
  float rotation_y = 9;
}

message SpawnMyPlayer {
  float x = 1;
  float y = 2;
  float z = 3;
  float rotation_y = 4;
  int32 playerTemplate = 5;
}

message SpawnOtherPlayer {
  string playerId = 1;
  float x = 2;
  float y = 3;
  float z = 4;
  float rotation_y = 5;
  int32 playerTemplate = 6;
}

message ApplyRootMotion {
  string playerId = 1;
  bool rootMosion = 2;
}

message AnimatorSetInteger {
  string playerId = 1;
  string animId = 2;
  int32 condition = 3;
}

message AnimatorSetFloat {
  string playerId = 1;
  string animId = 2;
  float condition = 3;
}

message AnimatorSetBool {
  string playerId = 1;
  string animId = 2;
  bool condition = 3;
}

message AnimatorSetTrigger {
  string playerId = 1;
  string animId = 2;
}

message ChatMessage {
  string sender = 1;
  string content = 2;
}

message LoginMessage {
  string playerId = 1; 
  int32 playerTemplate = 2;   
}

message LogoutMessage {
  string playerId = 1;    
}

message SpawnMonster {
  float x = 1;
  float z = 2;
  int32 monsterId = 3;
  float rotationY = 4;
}

message MoveMonster {
  float x = 1;
  float z = 2;
  int32 monsterId = 3;
}

message MonsterTarget {
  int32 monsterId = 1;
  string targetPlayerId = 2;
  bool hasTarget = 3;
}

message MonsterAttack {
    int32 monsterId = 1;
    string targetPlayerId = 2;
    int32 attackType = 3;
    float damage = 4;
}

message MonsterProjectile {
    int32 monsterId = 1;
    float startX = 2;
    float startZ = 3;
    float targetX = 4;
    float targetZ = 5;
    int32 projectileId = 6;
}

message MeteorStrikePosition {
    float x = 1;
    float z = 2;
}

message MeteorStrike {
    int32 monsterId = 1;
    repeated MeteorStrikePosition positions = 2;
}

message MonsterDamage {
    int32 monster_id = 1;
    float damage = 2;
    int32 current_hp = 3;
    float hit_point_x = 4;
    float hit_point_y = 5;
    float hit_point_z = 6;
    float hit_normal_x = 7;
    float hit_normal_y = 8;
    float hit_normal_z = 9;
    int32 hit_effect_type = 10;
}

message PlayerDamage {
    string playerId = 1;
    float damage = 2;
    int32 attackType = 3;
    float hitPointX = 4;
    float hitPointY = 5;
    float hitPointZ = 6;
}

message MonsterRotate {
    int32 monsterId = 1;
    float rotation = 2;
     float duration = 3;
}


message Point3D {
    float x = 1;
    float y = 2;
    float z = 3;
}

message MonsterHitEffect {
    int32 monster_id = 1;
    Point3D hit_point = 2;
    Point3D hit_normal = 3;
    int32 hit_effect_type = 4;
}
message GameMessage {
  oneof message {
    PlayerPosition player_position = 1;
    ChatMessage chat = 2;
    LoginMessage login = 3;
    SpawnMyPlayer spawnMyPlayer = 4;
    SpawnOtherPlayer spawnOtherPlayer = 5;
    LogoutMessage logout = 6;
    PathTest pathTest = 7;
    SpawnMonster spawnMonster = 8;
    MoveMonster moveMonster = 9;
    MonsterTarget monsterTarget = 10;
    MonsterAttack monsterAttack = 11;
    MonsterProjectile monsterProjectile = 12;
    MeteorStrike meteorStrike = 13;
    MonsterDamage monsterDamage = 14;
    PlayerDamage playerDamage = 15;
    MonsterRotate monsterRotate = 16;
    AnimatorSetFloat animatorSetFloat = 17;
    AnimatorSetBool animatorSetBool = 18;
    AnimatorSetTrigger animatorSetTrigger = 19;
    AnimatorSetInteger animatorSetInteger = 20;
    ApplyRootMotion applyRootMotion = 21;
    MonsterHitEffect monsterHitEffect = 22;
  }
} 
